--- a/index.html
+++ b/index.html
@@ -5,9 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Abby</title>
+    <style>
+        body {
+            background:rgb(98, 96, 228)
+        }
+    </style>
 </head>
 <body>
     <h3>ABOUT ME</h3>
     <p>This page is all about me</p>
+
 </body>
 </html>
