text colour changed

--- a/index.html
+++ b/index.html
@@ -7,13 +7,16 @@
     <title>Abby</title>
     <style>
         body {
-            background:rgb(117, 116, 170)
+            background:rgb(135, 203, 248)
         }
     </style>
 </head>
 <body>
-    <h3>ABOUT ME</h3>
-    <p>This page is all about me</p>
+    <h2><b><u>ABOUT ME</u></b></h2>
+    <br>
+    <b style="colour:rgb(17, 0, 255)">This page is all about me</b>
+    <br>
+    <b style="colour:rgb(0, 48, 77)">I will discuss about me</b>
 
 </body>
 </html>
