--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 <body>
     <h2><b><u>ABOUT ME</u></b></h2>
     <br>
-    <b style="colour:rgb(17, 0, 255)">This page is all about me</b>
+    <p style="color:rgb(17, 0, 255)">This page is all about me</p>
     <br>
-    <b style="colour:rgb(0, 48, 77)">I will discuss about me</b>
+    <p style="color:rgb(5, 89, 128)">I will discuss about me</p>
 
 </body>
 </html>
